--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@angular/platform-browser": "^16.1.6",
     "@angular/platform-browser-dynamic": "^16.1.6",
     "@angular/router": "^16.1.6",
+    "@ng-bootstrap/ng-bootstrap": "^15.1.0",
     "ngx-socket-io": "^4.5.1",
     "rxjs": "~7.8.1",
     "tslib": "^2.6.0",
